style: fix position of navbar and search bar on mobile

--- a/assets/css/navbar.css
+++ b/assets/css/navbar.css
@@ -141,7 +141,7 @@ nav .wrapper{
     display: block;
   }
   .wrapper .nav-links{
-    position: fixed;
+    position: absolute;
     height: 100vh;
     width: 100%;
     max-width: 350px;
@@ -154,6 +154,9 @@ nav .wrapper{
     overflow-y: auto;
     box-shadow: 0px 15px 15px rgba(0,0,0,0.18);
     transition: all 0.3s ease;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    z-index: 1;
   }
   /* custom scroll bar */
   ::-webkit-scrollbar {
