--- a/assets/css/posts.css
+++ b/assets/css/posts.css
@@ -1,53 +1,73 @@
 /* Posts.html */
 
 html, body {
-    height: 100%;
-    margin: 0px;
-    display: flex;
-    flex-direction: column;
+  height: 100%;
+  margin: 0px;
+  display: flex;
+  flex-direction: column;
 }
 
 .main-content {
-    
-    flex: 1;
-    margin-top: 30px;
+
+  flex: 1;
+  margin-top: 30px;
 }
 
 /**
  * Wrapper
  */
- .wrapper {
-    max-width: -webkit-calc(1200px - (30px * 2));
-    max-width: calc(1200px - 30px * 2);
-    margin-right: auto;
-    margin-left: auto;
-    padding-right: 30px;
-    padding-left: 30px;
-    margin-top: 30px;
-  }
-  @media screen and (max-width: 800px) {
-    .wrapper {
-      max-width: -webkit-calc(1200px - (30px));
-      max-width: calc(1200px - (30px));
-      padding-right: 15px;
-      padding-left: 15px;
-      margin-top: 10px;
-    }
-  }
-  
-
-/* position of the title Posts */
-h2 {
-    display: flex;
-    align-items: left;
-    justify-content: left;
-    margin-right: 40px;
-    
+.wrapper {
+  max-width: -webkit-calc(1200px - (30px * 2));
+  max-width: calc(1200px - 30px * 2);
+  margin-right: auto;
+  margin-left: auto;
+  padding-right: 30px;
+  padding-left: 30px;
+  margin-top: 30px;
 }
+@media screen and (max-width: 800px) {
+  .wrapper {
+    max-width: -webkit-calc(1200px - (30px));
+    max-width: calc(1200px - (30px));
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-top: 10px;
+  }
+}
+
 
 /* search bar width */
 .input-group {
-    width: 50%;
+  width: 50%;
+}
+
+.input-group .btn {
+  color: gray;
+  z-index: 0;
+}
+
+/* Position of the title Posts */
+h2 {
+  margin-bottom: 0;
+  margin-right: 2rem;
+  margin-left: 5rem;
+}
+
+/* Responsive styles */
+@media (max-width: 767px) {
+  .row {
+    flex-direction: row;
+    align-items: center;
+  }
+
+  .input-group {
+    flex-grow: 1;
+  }
+
+  h2 {
+  margin-right: 1rem;
+  margin-left: 0rem;
+}
 }
 
 
@@ -73,28 +93,28 @@ h2 {
   margin-bottom: 20px;
 }
 
-  
+
 
 
 .separator::before {
-    content: "";
-    position: absolute;
-    display: block;
-    width: 100%; /* Width of the first line */
-    height: 1px; /* Height (thickness) of the first line */
-    background: #ddd; /* Color of the first line */
-    bottom: 1px; /* Position from the bottom of the element */
-    left: 50%; /* Centering the line */
-    transform: translateX(-50%); /* Precise centering */
-  }
-  
+  content: "";
+  position: absolute;
+  display: block;
+  width: 100%; /* Width of the first line */
+  height: 1px; /* Height (thickness) of the first line */
+  background: #ddd; /* Color of the first line */
+  bottom: 1px; /* Position from the bottom of the element */
+  left: 50%; /* Centering the line */
+  transform: translateX(-50%); /* Precise centering */
+}
 
-  
+
+
 .separator {
-    position: relative; /* Required for absolute positioning of pseudo-elements */
-    height: 10px; /* Adjust as needed, should be enough to contain both ::before and ::after */
-    margin-top: 20px;
-    margin-bottom: 20px;
+  position: relative; /* Required for absolute positioning of pseudo-elements */
+  height: 10px; /* Adjust as needed, should be enough to contain both ::before and ::after */
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 .pagination {
@@ -142,21 +162,46 @@ h2 {
 }
 
 @media (max-width: 768px) {
-  .article {
-    width: 49%;
-  }
-}
 
-@media (max-width: 480px) {
   .article {
     width: 100%;
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+
+  .article img {
+    width: 100%;
+    height: 160px;
+    margin-bottom: 20px;
+    border: 2px solid black;
+    border-radius: 10px;
   }
 }
 
-  
-  
+
+.tag {
+  display: inline-block;
+  padding: 4px 8px;
+  background-color: #e0e0e0;
+  border-radius: 12px;
+}
+
+.tag-label {
+  font-size: 11px;
+  color: #333;
+}
+
+.tag-icon img {
+  width: 100%;
+  height: auto;
+}
 
 
 
 
- 
+
+
+
+
+
+
